--- a/animated-roles-&-id.css
+++ b/animated-roles-&-id.css
@@ -30,8 +30,10 @@
 .userPopout-xaxa6l[data-user-id="544520937077473314"] .profileBadges-ohc0Vu::before {
   content: "";
   position: relative;
-  width: 80px;
-  height: 40px;
+  top: 30px;
+  left: 80px;
+  width: 90px;
+  height: 60px;
   margin: 0px 0px 0 0;
   pointer-events: none;
   background: url("https://1000marcas.net/wp-content/uploads/2020/03/Nightwing-Logo-1.png") center/100% no-repeat;
