--- a/animated-roles-&-id.css
+++ b/animated-roles-&-id.css
@@ -90,7 +90,7 @@
   font-weight: bold;
   background-size: 300%;
   background-image: linear-gradient(-60deg, #1e5d88 10%, #d5d5d5 30%, #55ad7a 50%, #334d5c 70%, #23292e 80%, #1e5d88 100%);
-  animation: shine 10s linear infinite;
+  animation: shine-reversed 10s linear infinite;
   -webkit-background-clip: text;
 }
 
