--- a/animated-roles-&-id.css
+++ b/animated-roles-&-id.css
@@ -84,7 +84,35 @@
 
 
 
+/*MESSIER*/
+
+.message-2qnXI6[data-user-id="596455165565992963"] > :not(.repliedMessage-VokQwo) .username-1A8OIy,
+.message-2qnXI6[data-author-id="596455165565992963"] > :not(.repliedMessage-VokQwo) .username-1A8OIy,
+.message-2qnXI6[vz-user-id="596455165565992963"] .username-1A8OIy,
+.channel-2QD9_O[data-user-id="596455165565992963"] .overflow-WK9Ogt,
+.channel-2QD9_O[vz-user-id="596455165565992963"] .overflow-WK9Ogt,
+.member-3-YXUe[data-user-id="596455165565992963"] .roleColor-rz2vM0,
+.member-3-YXUe[vz-user-id="596455165565992963"] .roleColor-rz2vM0,
+.userPopout-xaxa6l[data-user-id="596455165565992963"] .username-2b1r56,
+.userPopout-xaxa6l[vz-user-id="596455165565992963"] .username-2b1r56,
+.root-3QyAh1[data-user-id="596455165565992963"] .username-2b1r56 {
+  color: transparent !important;
+  font-weight: bold;
+  background-size: 300%;
+  animation: shine-reversed 10s linear infinite;
+  -webkit-background-clip: text;
+  background-image: linear-gradient(-60deg, #9F39E9 20%, #F12A3E 50%, #4D586B 80%, #9F39E9 100%);
+}
+@keyframes shine-reversed {
+  to { background-position: 300% center; }
+}
+
+
+
+
+
 /*BOTS*/
+
 .membersGroup-v9BXpm[aria-label*="BOTS"] ~ .member-3-YXUe .roleColor-rz2vM0[style="color: rgb(65, 79, 90);"] {
   color: transparent !important;
   font-weight: bold;
