--- a/animated-roles-&-id.css
+++ b/animated-roles-&-id.css
@@ -108,6 +108,30 @@
 /*--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------*/
 
 
+/*Tacoman*/
+
+.message-2qnXI6[data-user-id="656338874444021768"] > :not(.repliedMessage-VokQwo) .username-1A8OIy,
+.message-2qnXI6[data-author-id="656338874444021768"] > :not(.repliedMessage-VokQwo) .username-1A8OIy,
+.message-2qnXI6[vz-user-id="656338874444021768"] .username-1A8OIy,
+.channel-2QD9_O[data-user-id="656338874444021768"] .overflow-WK9Ogt,
+.channel-2QD9_O[vz-user-id="656338874444021768"] .overflow-WK9Ogt,
+.member-3-YXUe[data-user-id="656338874444021768"] .roleColor-rz2vM0,
+.member-3-YXUe[vz-user-id="656338874444021768"] .roleColor-rz2vM0,
+.userPopout-xaxa6l[data-user-id="656338874444021768"] .username-2b1r56,
+.userPopout-xaxa6l[vz-user-id="656338874444021768"] .username-2b1r56,
+.root-3QyAh1[data-user-id="656338874444021768"] .username-2b1r56 {
+  color: transparent !important;
+  font-weight: bold;
+  background-size: 300%;
+  animation: shine-reversed 10s linear infinite;
+  -webkit-background-clip: text;
+  background-image: linear-gradient(-60deg, #f6c95c 1%, #e7af00 30%, #c91919 40%, #41a332 70%, #983d00 90%, #f6c95c 100%);
+}
+
+
+/*--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------*/
+
+
 /*Valorant*/
 
 .membersGroup-v9BXpm[aria-label*="Valorant"] ~ .member-3-YXUe .roleColor-rz2vM0[style="color: rgb(182, 21, 21);"] {
