--- a/waves-n-spotify-no-scrollbar.css
+++ b/waves-n-spotify-no-scrollbar.css
@@ -152,7 +152,7 @@
 }
 
 
-/*scroll bar*/
+/* NO scroll bar*/
 
 ::-webkit-scrollbar { display: none;}.content-1gYQeQ { margin: 0 !important; border-radius: 0; }.mainContent-20q_Hp { padding-left: 8px;}.container-1oeRFJ { margin: 0; max-width: unset; }.layout-1qmrhw { border-radius: 0; padding: 0 16px;}.unread-36eUEm { z-index: 1;} .buttons-uaqb-5 { padding-right: 10px !important;}
 
